--- a/templates/contact/home.html.twig
+++ b/templates/contact/home.html.twig
@@ -1,4 +1,9 @@
-<h1>Bienvenue dans ce système de gestion de contacts</h1>
+{% extends 'base.html.twig' %}
+{% block body %}
+
+<h1></h1>
 <p>
     <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A deserunt, distinctio dolorum eligendi eveniet exercitationem explicabo fugit harum laudantium necessitatibus nostrum numquam perspiciatis placeat provident quidem quisquam quo tempora ut!</span>
 </p>
+
+{% endblock %}
