--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -1,20 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello {{ controller_name }}!{% endblock %}
+{% block title %}Hello !{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'src/Controller/ContactController.php'|file_link(0) }}">src/Controller/ContactController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'templates/contact/index.html.twig'|file_link(0) }}">templates/contact/index.html.twig</a></code></li>
-    </ul>
-</div>
+<section class="contacts">
+    {% for contact in contacts %}
+    <article>
+        <h2>{{ contact.firstname }}</h2>
+        <div class="metadata">Rajouté le {{ contact.createdAt | date('d-m-Y')}} à {{ contact.createdAt | date('H:i')}}</div>
+        <div class="content">{{ contact.firstname }} {{ contact.lastname }}</div>
+        <div class="content">{{ contact.email }}</div>
+        <a href="{{ path('contact_show', {'id': contact.id}) }}" class="btn btn-success">Détails</a>
+    </article>
+    {% endfor %}
+</section>
 {% endblock %}
