--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,7 +8,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <a class="navbar-brand" href="/">Gestionnaire de contacts</a>
+            <a class="navbar-brand" href="{{ path('home') }}">Gestionnaire de contacts</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -16,10 +16,10 @@
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact">Contacts</a>
+                        <a class="nav-link" href="{{ path('contact') }}">Contacts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact/new">Rajouter un contact</a>
+                        <a class="nav-link" href="{{ path('contact_create') }}">Rajouter un contact</a>
                     </li>
                 </ul>
             </div>
