--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,11 +5,11 @@
 
     <form action="{{ path('security_login') }}" method="post">
         <div class="form-group">
-            <input type="text" placeholder="Veillez rentrer votre login" required name="_username" class="form-control">
+            <input type="text" placeholder="Veuillez rentrer votre login" required name="_username" class="form-control">
         </div>
 
         <div class="form-group">
-            <input type="password" placeholder="Veillez rentrer votre mots de passe" required name="_password"
+            <input type="password" placeholder="Veuillez rentrer votre mots de passe" required name="_password"
                    class="form-control">
         </div>
         <div class="form-group">
