--- a/templates/contact/home.html.twig
+++ b/templates/contact/home.html.twig
@@ -3,7 +3,10 @@
 
 <h1></h1>
 <p>
-    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A deserunt, distinctio dolorum eligendi eveniet exercitationem explicabo fugit harum laudantium necessitatibus nostrum numquam perspiciatis placeat provident quidem quisquam quo tempora ut!</span>
+    <span>Bienvenue dans la page d'accueil de l'application de gestion des contacts</span>
 </p>
+    <section class="registration">
+        <p>Pour vous enregistrer veuillez cliquer sur ce  <a href="{{ path('security_registration') }}">lien</a></p>
+    </section>
 
 {% endblock %}
