--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <h1>Inscription sur le site</h1>
+    <h1>Inscription à l'application</h1>
 
     {{ form_start(registrationFrom) }}
     {{ form_row(registrationFrom.login, {'attr' : {
